--- a/sgg/003_虚拟DOM的两种创建方式.md
+++ b/sgg/003_虚拟DOM的两种创建方式.md
@@ -2,3 +2,36 @@
 
 
 
+```html
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>2_使用js创建虚拟DOM.html</title>
+</head>
+<body>
+<!--准备好一个"容器""-->
+<div id="test"></div>
+<!--引入 react 核心库-->
+<script type="text/javascript" src="../js/react.development.js"></script>
+<!--引入 react-dom ,用于支持react 操作Dom-->
+<script type="text/javascript" src="../js/react-dom.development.js"></script>
+<!--引入babel,用于将jsx转为js-->
+<script type="text/javascript" src="../js/babel.min.js"></script>
+<script type="text/javascript">
+    // 1. 创建虚拟Dom
+    // const VDOM = React.createElement(标签名,标签属性,标签内容)
+    // 2. 渲染虚拟DOM到页面
+    ReactDOM.render(VDOM, document.getElementById('test')); // 这个地方你不服
+</script>
+
+
+</body>
+</html>
+
+```
+
+
