--- a/sgg/003_虚拟DOM的两种创建方式.md
+++ b/sgg/003_虚拟DOM的两种创建方式.md
@@ -24,6 +24,8 @@
 <script type="text/javascript">
     // 1. 创建虚拟Dom
     // const VDOM = React.createElement(标签名,标签属性,标签内容)
+    const VDOM = React.createElement('h1',{id:'title'},'hello,React')
+    
     // 2. 渲染虚拟DOM到页面
     ReactDOM.render(VDOM, document.getElementById('test')); // 这个地方你不服
 </script>
