--- a/sgg/003_虚拟DOM的两种创建方式.md
+++ b/sgg/003_虚拟DOM的两种创建方式.md
@@ -36,4 +36,19 @@
 
 ```
 
+JSX
+
+可以让编码人员更加简单的创建多级DOM
+
+
+```html
+// 1. 创建虚拟Dom
+    const VDOM = (// 此处一定不要写引号,因为不是字符串
+        <h1 id="title">
+            <span>Hello,React</span>    
+        </h1>
+    )   
+```
+
+JSX就是原生js的语法糖
 
