--- a/sgg/005_jsx语法规则.md
+++ b/sgg/005_jsx语法规则.md
@@ -1,1 +1,24 @@
-# 005_jsx语法规则.md
+# 005_jsx语法规则
+
+XML早期用于存储和传输数据
+
+```xml
+<student>
+    <name>Tom</name>
+    <age>19</age>
+</student>
+```
+
+后来又有了json 了
+
+```json
+{
+  "name":"Tom",
+  "age":"19"
+}
+```
+
+现在json比较NB,但是也不是也为这xml就不用了,你比如说微信公众号数据传输中还有在用的
+
+
+
