--- a/sgg/008_开发者工具的安装.md
+++ b/sgg/008_开发者工具的安装.md
@@ -1,1 +1,26 @@
-# 008_开发者工具的安装.md
+# 008_开发者工具的安装
+
+![image-20210309111005996](img/image-20210309111005996.png)
+
+![image-20210309111329823](img/image-20210309111329823.png)
+
+![image-20210309111149250](img/image-20210309111149250.png)
+
+![image-20210309111303294](img/image-20210309111303294.png)
+
+打开一个 react 项目试试
+
+![image-20210309111428756](img/image-20210309111428756.png)
+
+这个颜色的图标表示,你是在开发环境中,并且么有打包
+
+> 来看一个正常的
+
+![image-20210309111514708](img/image-20210309111514708.png)
+
+![image-20210309111620285](img/image-20210309111620285.png)
+
+这里多了2个工具,一个组件,一个用于监控性能
+
+
+
