函数式组件 over

--- a/sgg/009_函数式组件.md
+++ b/sgg/009_函数式组件.md
@@ -42,3 +42,28 @@
 ```
 
 ![image-20210309133012631](img/image-20210309133012631.png)
+
+```javascript
+function MyComponent() {
+        console.log(this);  // this 是 undefend
+        // babel翻译完之后 开启严格模式
+        // 严格模式 : 禁止this指向
+        return <h2>我是用函数定义的组件(使用与简单组件的定义)</h2>
+    }
+    // 渲染组件到页面
+    ReactDOM.render(<MyComponent/>,document.getElementById('test'))
+/*
+    * 执行了ReactDOM.render(<MyComponent/>...之后?发生了什么?
+    *   1. React解析组件标签,找到了MyComponent组件.
+    *   2. 发现组件是使用函数定义的,随后调用该函数,将返回的虚拟DOM转为真实DOM,随后呈现在页面中
+    * */
+```
+
+
+
+![image-20210309133248015](img/image-20210309133248015.png)
+
+>你写的jsx就是js的语法糖
+
+
+
