--- a/sgg/011_类式组件.md
+++ b/sgg/011_类式组件.md
@@ -1,1 +1,15 @@
-# 011_类式组件.md
+# 011_类式组件
+
+这个构造器可以不写
+
+但是render()是一定要写的
+
+![image-20210309141023230](img/image-20210309141023230.png)
+
+```html
+
+```
+
+
+
+![image-20210309142250852](img/image-20210309142250852.png)
