--- a/sgg/010_复习类相关知识.md
+++ b/sgg/010_复习类相关知识.md
@@ -72,3 +72,80 @@
 ![image-20210309134516515](img/image-20210309134516515.png)
 
 ![image-20210309134819795](img/image-20210309134819795.png)
+
+```html
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<script type="application/javascript">
+    /*
+    * 总结:
+    *   1. 类中的构造器不是必须写的,要对实例进行一些初始化的操作,如添加指定属性时才写.
+    *   2. 如果A继承了B类,且A类中写了构造器,那么A类构造器中的super是必须要调用的
+    *   3. 类中定义的方法其实是放在了,都是放在了,类的原型对象上,供 实例去实例使用
+    * */
+    // 创建一个Person类
+    class Person {
+        // 构造方法 构造器
+        constructor(name, age) {
+            // this是类的实例对象
+            this.name = name;
+            this.age = age;
+        }
+
+        // 一般方法(处理 构造方法 都是一般方法
+        speak() {
+            // es6里面的模板语法
+            console.log(`我叫${this.name},我的年龄是${this.age}`);
+
+        }
+
+    }
+
+    // 创建一个Student类,继承与Person类
+    class Student extends Person {
+
+        // 对于学生来说,我就可以不写构造器
+        constructor(name, age, grade) {
+            // 这里必须调用爸爸,超累
+            super();    // super必须要之前调用
+            this.grade = grade;
+        }
+        // 一般方法(处理 构造方法 都是一般方法
+        speak() {
+            // es6里面的模板语法
+            console.log(`我叫${this.name},我的年龄是${this.age},我的年纪是${this.grade}`)
+
+        }
+    }
+
+    // 创建一个Person的实例对象
+    const s1 = new Student('小张', 16,'高一');
+    console.log(s1);
+    /*
+    Student {name: undefined, age: undefined, grade: "高一"}
+    age: undefined
+    grade: "高一"
+    name: undefined
+    __proto__: Person
+    * */
+    s1.speak()
+
+    const p1 = new Person("是", 45);
+    const p2 = new Person("贝壳多", 25);
+    console.log(p1)
+    console.log(p2)
+    p1.speak()
+    p2.speak()
+    console.log("vicotsr")
+</script>
+</body>
+</html>
+```
