组件3大属性

--- a/sgg/027_字符串形式的ref.md
+++ b/sgg/027_字符串形式的ref.md
@@ -1,1 +1,17 @@
-# 027_字符串形式的ref.md
+# 027_字符串形式的ref
+
+
+
+## 效果
+需求: 自定义组件, 功能说明如下:
+
+1. 点击按钮, 提示第一个输入框中的值
+
+2. 当第2个输入框失去焦点时, 提示这个输入框中的值
+
+## 理解
+>组件里面可以用ref 属性来标识自己
+
+你只要敢用ref来标识
+
+他就能在refs里面 包含你
