--- a/sgg/026_总结.md
+++ b/sgg/026_总结.md
@@ -3,4 +3,14 @@
 props 不要写成 proto
 
 
+## 理解
+每个组件对象都会有props(properties的简写)属性
 
+2. 组件标签的所有属性都保存在props中
+
+## 作用
+1. 通过标签属性从组件外向组件内传递变化的数据
+
+2. 注意: 组件内部不要修改props数据
+
+![image-20210310132023943](img/image-20210310132023943.png)
