--- a/sgg/031_总结ref.md
+++ b/sgg/031_总结ref.md
@@ -1,1 +1,30 @@
-# 031_总结ref.md
+# 031_总结ref
+
+## 1. 字符串形式ref
+你只需要写名字,他自动帮你回收到
+
+在条件允许的形式下,尽可能不要写这种字符串形式的ref
+那什么是条件不允许呢
+
+> 比如你写的项目工期比较紧张,你偷偷的写一些字符串形式的ref,这样也不会引发太严重的bug
+>
+>
+
+### 一句话
+ 能避免尽量避免
+ 
+ 
+## 回调形式ref
+
+函数比字符串麻烦了一些
+
+官网说了,内联的形式他调用2次,他也无关紧要
+
+
+## createRef
+
+这种最复杂
+
+你要创建ref容器
+
+这种也是官方最推荐的一种
