--- a/sgg/029_回调ref中调用次数的问题.md
+++ b/sgg/029_回调ref中调用次数的问题.md
@@ -15,42 +15,42 @@
 
 ```js
 //创建组件
-    class Demo extends React.Component {
-        state = {
-            isHot: false,
-        }
-
-        showInfo = () => {
-            const {input1} = this
-            alert(input1.value)
-        }
-        // changeWeather = () =>{}
-        // 这种状态形式
-        changeWeather = () => {
-            // 获取原来的状态
-            const {isHot} = this.isHot
-            this.setState({isHot: !isHot})
-        }
-
-        render() {
-            const {isHot} = this.state
-            return (
-                <div>
-                    <h2>今天天气很{isHot ? "热" : "凉"}</h2>
-                    <input ref={(currentNode) => {
-                        this.input1 = currentNode
-                        console.log("@ ", currentNode);
-                    }} type="text"/><br/>
-                    <button onClick={this.showInfo}>点我提示输入的数据</button>
-
-                    <button onClick={this.changeWeather}>改变</button>
-                </div>
-            )
-        }
+class Demo extends React.Component {
+    state = {
+        isHot: false,
     }
 
-    //渲染组件到页面
-    ReactDOM.render(<Demo/>, document.getElementById('test'))
+    showInfo = () => {
+        const {input1} = this
+        alert(input1.value)
+    }
+    // changeWeather = () =>{}
+    // 这种状态形式
+    changeWeather = () => {
+        // 获取原来的状态
+        const {isHot} = this.isHot
+        this.setState({isHot: !isHot})
+    }
+
+    render() {
+        const {isHot} = this.state
+        return (
+            <div>
+                <h2>今天天气很{isHot ? "热" : "凉"}</h2>
+                <input ref={(currentNode) => {
+                    this.input1 = currentNode
+                    console.log("@ ", currentNode);
+                }} type="text"/><br/>
+                <button onClick={this.showInfo}>点我提示输入的数据</button>
+
+                <button onClick={this.changeWeather}>改变</button>
+            </div>
+        )
+    }
+}
+
+//渲染组件到页面
+ReactDOM.render(<Demo/>, document.getElementById('test'))
 ```
 
 
@@ -75,4 +75,52 @@
 
 
 
-代码
+## 代码
+```javascript
+//创建组件
+class Demo extends React.Component {
+    state = {
+        isHot: false,
+    }
+
+    showInfo = () => {
+        const {input1} = this
+        alert(input1.value)
+    }
+    // changeWeather = () =>{}
+    // 这种状态形式
+    changeWeather = () => {
+        // 获取原来的状态
+        const {isHot} = this.state
+        this.setState({isHot: !isHot})
+    }
+
+    saveInput = (c) => {
+        this.input1 = c;
+        console.log('@',c);
+    };
+
+    render() {
+        const {isHot} = this.state
+        return (
+            <div>
+                <h2>今天天气很{isHot ? "热" : "凉"}</h2>
+                {/*<input ref={(currentNode) => {
+                    this.input1 = currentNode
+                    console.log("@ ", currentNode);
+                }} type="text"/><br/>*/}
+                <input ref={this.saveInput} type="text"/><br/>
+                <button onClick={this.showInfo}>点我提示输入的数据</button>
+
+                <button onClick={this.changeWeather}>改变</button>
+            </div>
+        )
+    }
+}
+
+//渲染组件到页面
+ReactDOM.render(<Demo/>, document.getElementById('test'))
+```
+
+>官方说了,这个没什么影响
+>
