--- a/sgg/034_受控组件.md
+++ b/sgg/034_受控组件.md
@@ -1,1 +1,21 @@
-# 034_受控组件.md
+# 034_受控组件
+
+只要改变了就调用onchange 所指向的回调
+
+
+
+## 受控组件
+页面中所有输入类的DOM
+
+这种输入类的DOM,随着你的输入,人家就会把东西维护到状态里面去
+
+等你需要用的时候,直接从装填里面去取
+
+>就像Vue里面的双向数据绑定
+>
+
+在这里面,你不用写ref
+
+而非受控里面,你有几个输入项,就要写几个ref
+
+而官方说 [勿过度使用 Refs](https://react.docschina.org/docs/refs-and-the-dom.html#dont-overuse-refs)
