不用科里话

--- a/sgg/036_不用柯里化的写法.md
+++ b/sgg/036_不用柯里化的写法.md
@@ -1,1 +1,44 @@
-# 036_不用柯里化的写法.md
+# 036_不用柯里化的写法
+
+
+就是直接写一个匿名函数,就不至于要套一层,来传递参数了
+
+
+
+```javascript
+//创建组件
+class Login extends React.Component {
+    //初始化状态
+    state = {
+        username: '', //用户名
+        password: '' //密码
+    }
+
+//保存表单数据到状态中
+saveFormData = (dataType, event) => {
+    this.setState({[dataType]: event.target.value})
+}
+
+//表单提交的回调
+handleSubmit = (event) => {
+    event.preventDefault() //阻止表单提交
+    const {username, password} = this.state
+    alert(`你输入的用户名是：${username},你输入的密码是：${password}`)
+}
+
+render() {
+    return (
+        <form onSubmit={this.handleSubmit}>
+        用户名：<input onChange={event => this.saveFormData('username', event)} type="text" name="username"/>
+            密码：<input onChange={event => this.saveFormData('password', event)} type="password" name="password"/>
+                <button>登录</button>
+</form>
+)
+}
+}
+
+//渲染组件
+ReactDOM.render(<Login/>, document.getElementById('test'))
+```
+
+
