--- a/sgg/038_生命周期旧_组件挂载流程.md
+++ b/sgg/038_生命周期旧_组件挂载流程.md
@@ -1,2 +1,3 @@
 # 038_生命周期(旧)_组件挂载流程
 
+![1615374349820](038_%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%97%A7_%E7%BB%84%E4%BB%B6%E6%8C%82%E8%BD%BD%E6%B5%81%E7%A8%8B/1615374349820.png)
