--- a/sgg/038_生命周期旧_组件挂载流程.md
+++ b/sgg/038_生命周期旧_组件挂载流程.md
@@ -1,3 +1,48 @@
 # 038_生命周期(旧)_组件挂载流程
 
+
+
+理解:
+
+1. 组件从创建到死亡她会经历一些特定的阶段
+2. React组件中包含一系列钩子函数(声明周期函数),会在特定的时刻调用
+3. 我们在定义组件时,会在特定的声明周期回调函数中,做特定的工作.
+
 ![1615374349820](038_%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%97%A7_%E7%BB%84%E4%BB%B6%E6%8C%82%E8%BD%BD%E6%B5%81%E7%A8%8B/1615374349820.png)
+
+> 声明周期函数(钩子) 什么时候调用,和你写在哪儿么有关系
+
+案例
+
+```javascript
+    // 定义组件
+    class Count extends React.Component {
+
+        // 初始化状态
+        state = {count: 0}
+        // 这里count 和类名 Count 没关系
+
+        //加1按钮的回调
+        add = () => {
+            // 获取原来的状态
+            const {count} = this.state;
+            // 更新状态
+            this.setState({count: count + 1})
+        };
+
+        render() {
+            const {count} = this.state;
+            return (
+                <div>
+                    <h2>当前求和为:{count}</h2>
+                    <button onClick={this.add}>点我+1</button>
+                </div>
+            )
+        }
+    }
+
+    //渲染组件
+    ReactDOM.render(<Count/>, document.getElementById('test'))
+```
+
+![1615375049976](038_%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%97%A7_%E7%BB%84%E4%BB%B6%E6%8C%82%E8%BD%BD%E6%B5%81%E7%A8%8B/1615375049976.png)
