--- a/sgg/038_生命周期旧_组件挂载流程.md
+++ b/sgg/038_生命周期旧_组件挂载流程.md
@@ -46,3 +46,65 @@
 ```
 
 ![1615375049976](038_%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%97%A7_%E7%BB%84%E4%BB%B6%E6%8C%82%E8%BD%BD%E6%B5%81%E7%A8%8B/1615375049976.png)
+
+测试顺序
+
+
+
+```javascript
+    // 定义组件
+    class Count extends React.Component {
+
+        // 第一个调用的当然是构造器
+        constructor(props) {
+            console.log("count-constructor");
+            super(props);
+            // 初始化状态
+            this.state = {count: 0}
+                    // 这里count 和类名 Count 没关系
+
+        }
+
+        //加1按钮的回调
+        add = () => {
+            // 获取原来的状态
+            const {count} = this.state;
+            // 更新状态
+            this.setState({count: count + 1})
+        };
+
+        // 组件将要挂载的钩子
+        componentWillMount() {
+            console.log("componentWillMount");
+        }
+
+        // 组件挂载完毕的钩子
+        componentDidMount() {
+            console.log("componentDitMount")
+        }
+        render() {
+            console.log("render")
+            const {count} = this.state;
+            return (
+                <div>
+                    <h2>当前求和为:{count}</h2>
+                    <button onClick={this.add}>点我+1</button>
+                </div>
+            )
+        }
+    }
+
+    //渲染组件
+    ReactDOM.render(<Count/>, document.getElementById('test'))
+```
+
+
+
+```
+
+Inline Babel script:8 count-constructor
+Inline Babel script:27 componentWillMount
+Inline Babel script:35 render
+Inline Babel script:32 componentDitMount
+```
+
