总结声明周期 over

--- a/sgg/042_总结生命周期旧.md
+++ b/sgg/042_总结生命周期旧.md
@@ -1,1 +1,31 @@
-# 042_总结生命周期(旧).md
+# 042_总结生命周期(旧)
+
+
+生命周期的三个阶段（新）
+
+---
+
+1. 初始化阶段: 由ReactDOM.render()触发---初次渲染
+    1. constructor()
+    2. getDerivedStateFromProps
+    3. render()
+    4. componentDidMount()  	===> **常用**,
+       1. 一般在这个钩子里面做一些初始化的事情,例如:
+          1. 开启定时器
+          2. 发送网络请求
+          3. 订阅消息
+2. 更新阶段: 由组件内部this.setSate()或父组件重新render触发
+    1. getDerivedStateFromProps
+    2. shouldComponentUpdate()
+       3. render()===>**必须要用**
+    4. getSnapshotBeforeUpdate
+    5. componentDidUpdate()
+3. 卸载组件: 由ReactDOM.unmountComponentAtNode()触发
+	1. componentWillUnmount() ===> **常用**
+	   1. 一般在这个钩子里面做一些收尾的事情,例如:
+	      1. 关闭定时器
+	      2. 取消订阅
+	      3. 网络请求(这个没有,你都发出去网络请求了,还怎么着)
+	      
+	      
+![1615374349820](038_%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F%E6%97%A7_%E7%BB%84%E4%BB%B6%E6%8C%82%E8%BD%BD%E6%B5%81%E7%A8%8B/1615374349820.png)	      
