换新版本的 react 库

--- a/sgg/043_对比新旧生命周期.md
+++ b/sgg/043_对比新旧生命周期.md
@@ -1,1 +1,16 @@
-# 043_对比新旧生命周期.md
+# 043_对比新旧生命周期
+
+我不能跟你讲最新的声明周期
+
+咱先更新一下react最新版本
+
+
+
+看看官网的[CDN连接](https://react.docschina.org/docs/cdn-links.html)
+
+给你推荐一个网站:[bootcdn](https://www.bootcdn.cn/) 这个网站前端的cdn都有
+
+
+
+
+
