--- a/sgg/047_总结生命周期新.md
+++ b/sgg/047_总结生命周期新.md
@@ -1,1 +1,15 @@
-# 047_总结生命周期(新).md
+# 047_总结生命周期(新)
+
+2.6.5. 重要的勾子
+1. render：初始化渲染或更新渲染调用
+
+2. componentDidMount：开启监听, 发送ajax请求
+
+3. componentWillUnmount：做一些收尾工作, 如: 清理定时器
+
+2.6.6. 即将废弃的勾子
+1. componentWillMount
+
+2. componentWillReceiveProps
+
+3. componentWillUpdate
