--- a/sgg/055_组件化编码流程.md
+++ b/sgg/055_组件化编码流程.md
@@ -1,1 +1,15 @@
-# 055_组件化编码流程.md
+# 055_组件化编码流程
+
+
+## 功能界面的组件化编码流程（通用）
+1. 拆分组件: 拆分界面,抽取组件
+2. 实现静态组件: 使用组件实现静态页面效果
+3. 实现动态组件
+    3.1 动态显示初始化数据
+        1. 数据类型
+        1. 数据名称
+        1. 保存在哪个组件?
+    3.2 交互(从绑定事件监听开始)
+
+>在学基础的部分中还是要按照这个流程走的
+
