react -> axios -> promise

--- a/sgg/065_脚手架配置代理_方法1.md
+++ b/sgg/065_脚手架配置代理_方法1.md
@@ -1,1 +1,24 @@
 # 065_脚手架配置代理_方法1
+
+## react ajax
+
+1. React本身只关注于界面, 并不包含发送ajax请求的代码
+
+2. 前端应用需要通过ajax请求与后台进行交互(json数据)
+
+3. react应用中需要集成第三方ajax库(或自己封装)
+
+你为什么学习React ? 
+
+> 是要尽量减少自己去操作DOM
+
+> 你只是更新状态,该数据,React 帮你是更新然后渲染页面
+>
+> React 的核心就是你别自己操作DOM
+>
+> 所以不建议用JQ,在React里面导入
+
+
+
+脚手架配置代理
+
